--- a/_posts/2016-10-03-CityFlow.md
+++ b/_posts/2016-10-03-CityFlow.md
@@ -5,10 +5,10 @@ excerpt: "It may well be the best statistical graphic ever drawn -- Tufte"
 categories: [2D, Flow Map]
 author: Yuhang
 comments: true
-<iframe src="https://player.vimeo.com/video/173787508" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/173787508">cf. city flows - Screencast</a> from <a href="https://vimeo.com/tillnm">Till Nagel</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 image:
   feature: https://yuhanggu.github.io/MovementVis/img/MinardMap.jpg
+video:
+  feature: https://player.vimeo.com/video/173787508
 
 ---
 
