--- a/_posts/2016-10-03-CityFlow.md
+++ b/_posts/2016-10-03-CityFlow.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "The First Flow Map"
+title: "CF. City Flows"
 excerpt: "It may well be the best statistical graphic ever drawn -- Tufte"
 categories: [2D, Flow Map]
 author: Yuhang
