--- a/_posts/2016-10-03-CityFlow.md
+++ b/_posts/2016-10-03-CityFlow.md
@@ -1,18 +1,28 @@
 ---
 layout: post
-title: "CF. City Flows"
-excerpt: "It may well be the best statistical graphic ever drawn -- Tufte"
-categories: [2D, Flow Map]
+title: "CF. City Flows : a comparative visualization environment of urban bike mobility"
+excerpt: "cf. city flows is a comparative visualization environment of urban bike mobility designed to help citizens casually analyze three bike-sharing systems in the context of a public exhibition space."
+categories: [Animation]
 author: Yuhang
 comments: true
 video:
   feature: https://player.vimeo.com/video/173787508
-
 ---
 
 <div> <iframe src="https://player.vimeo.com/video/173787508" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/173787508">cf. city flows - Screencast</a> from <a href="https://vimeo.com/tillnm">Till Nagel</a> on <a href="https://vimeo.com">Vimeo</a>.</p></div>
+<p><a href="https://vimeo.com/173760057">cf. city flows - Screencast</a> from <a href="https://vimeo.com/tillnm">Till Nagel</a> on <a href="https://vimeo.com">Vimeo</a>.</p></div>
 
-The Minard map shows several ‘‘variables’’. As with any map, there is location. Next to the major paths, some minor paths are distinguished. Linked to the retreat path (the black, solid band) is a diagram indicating temperature. Additionally, the map shows the size of the army by numbers and by the width of the advance and retreat bands. Names indicate major battles and important geographic features. Time is inherently illustrated in the map as a clear distinction between the advance (going east) and retreat path (going west). Only in the temperature diagram, how- ever, are absolute time values provided. Interestingly, there was a long 50-km march between December 6 and 7 under very cold weather conditions, as can be read from the temperature diagram.
+cf. city flows is an installation that combines multiple visualizations of bike-sharing journeys in three cities. It applies established mapping and visualization techniques within a highly aestheticized framework in order to animate visitors to engage with urban mobility.
 
-Mapping the time dimension means mapping change in a feature’s geometry, its attributes or both. Traditionally, cartographers have three options to display geospatial data with a temporal component. These are a single (static) map, in which specific graphic variables and symbols are used to show change and represent events. Minard’s map is a good example of the first category. The second option is a series of (static) maps, sometimes called a small multiple. Fig. 3 gives several examples. The single map represents a snapshot in time and together the series of maps constitutes an event. succession of the individual maps depicting the events in successive snapshots. It could be said that the temporal sequence is represented by spatial sequence, which the user has to follow, in order to perceive temporal variation. Finally, one can create an animated map. Here change is perceived to happen in a single image by displaying several snapshots one after the other. The difference with the animation from the static series of maps is that the variations introduced to represent an event are not deduced from a spatial sequence, but from real movement on the map itself.
+
+<div class="slider-container" style="padding-bottom: 56.25%; padding-top: 25px; height: 0; margin-bottom: 1.5rem;
+  position: relative;
+  float: left;
+  margin-left: -1.25rem;
+  width: calc( 100% - .5rem);">
+                <iframe src="https://www.slideshare.net/slideshow/embed_code/key/DdqbWhOHLZUSEf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" allowfullscreen> </iframe>
+
+                <!--<script async class="speakerdeck-embed" data-id="f3c5eb2dd2c443c6b1d6d521f58d363e" data-ratio="1.77777777777778" src="http://speakerdeck.com/assets/embed.js"></script>-->
+            </div>
+
+<p>from <a href="https://uclab.fh-potsdam.de/cf/">cf. city flows</a></p>
