--- a/_posts/2016-10-03-CityFlow.md
+++ b/_posts/2016-10-03-CityFlow.md
@@ -14,12 +14,18 @@ video:
 
 cf. city flows is an installation that combines multiple visualizations of bike-sharing journeys in three cities. It applies established mapping and visualization techniques within a highly aestheticized framework in order to animate visitors to engage with urban mobility.
 
+The city flow has three different 
+cf. city flows has three viewing modes, all visualizing trips of rented bikes, but focusing on different levels of spatial and temporal granularity of cycling mobility:
+The citywide view aggregates all trajectories of bike-sharing trips for a given day and animates the trails for trips at a given time.
+In the station view only the bike trips to and from a selected station are shown, allowing the distinction between incoming and outgoing.
+A small-multiple view visualizes spatiotemporal patterns for three selected stations each in an exploded view that separates incoming from outgoing and morning from afternoon/evening trips.
+
 
 <div class="slider-container" style="padding-bottom: 56.25%; padding-top: 25px; height: 0; margin-bottom: 1.5rem;
   position: relative;
   float: left;
   margin-left: -1.25rem;
-  width: calc( 100% - .5rem);">
+  width: calc( 60% - .5rem);">
                 <iframe src="https://www.slideshare.net/slideshow/embed_code/key/DdqbWhOHLZUSEf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" allowfullscreen> </iframe>
 
                 <!--<script async class="speakerdeck-embed" data-id="f3c5eb2dd2c443c6b1d6d521f58d363e" data-ratio="1.77777777777778" src="http://speakerdeck.com/assets/embed.js"></script>-->
