--- a/_posts/2016-10-03-CityFlow.md
+++ b/_posts/2016-10-03-CityFlow.md
@@ -14,7 +14,7 @@ video:
 
 cf. city flows is an installation that combines multiple visualizations of bike-sharing journeys in three cities. It applies established mapping and visualization techniques within a highly aestheticized framework in order to animate visitors to engage with urban mobility.
 
-The city flow has three different 
+The city flow has three different visualization 
 cf. city flows has three viewing modes, all visualizing trips of rented bikes, but focusing on different levels of spatial and temporal granularity of cycling mobility:
 The citywide view aggregates all trajectories of bike-sharing trips for a given day and animates the trails for trips at a given time.
 In the station view only the bike trips to and from a selected station are shown, allowing the distinction between incoming and outgoing.
