--- a/_posts/2016-10-03-CityFlow.md
+++ b/_posts/2016-10-03-CityFlow.md
@@ -17,9 +17,11 @@ cf. city flows is an installation that combines multiple visualizations of bike-
 cf. city flows has three viewing modes, all visualizing trips of rented bikes, but focusing on different levels of spatial and temporal granularity of cycling mobility:
 The citywide view aggregates all trajectories of bike-sharing trips for a given day and animates the trails for trips at a given time.
 
+
 In the station view only the bike trips to and from a selected station are shown, allowing the distinction between incoming and outgoing.
 
-A small-multiple view visualizes spatiotemporal patterns for three selected stations each in an exploded view that separates incoming from outgoing and morning from afternoon/evening trips.
+
+A small-multiple view visualizes spatio-temporal patterns for three selected stations each in an exploded view that separates incoming from outgoing and morning from afternoon/evening trips.
 
 
 <div class="slider-container" style="padding-bottom: 56.25%; padding-top: 25px; height: 0; margin-bottom: 1.5rem;
