--- a/_posts/2016-10-03-CityFlow.md
+++ b/_posts/2016-10-03-CityFlow.md
@@ -15,7 +15,9 @@ video:
 cf. city flows is an installation that combines multiple visualizations of bike-sharing journeys in three cities. It applies established mapping and visualization techniques within a highly aestheticized framework in order to animate visitors to engage with urban mobility.
 
 cf. city flows has three viewing modes, all visualizing trips of rented bikes, but focusing on different levels of spatial and temporal granularity of cycling mobility:
-The citywide view aggregates all trajectories of bike-sharing trips for a given day and animates the trails for trips at a given time.
+
+
+The `citywide view` aggregates all trajectories of bike-sharing trips for a given day and animates the trails for trips at a given time.
 
 
 In the `station view` only the bike trips to and from a selected station are shown, allowing the distinction between incoming and outgoing.
@@ -29,9 +31,6 @@ A small-multiple view visualizes `spatio-temporal patterns` for three selected s
   float: left;
   margin-left: -1.25rem;
   width: calc( 100% - .5rem);">
-                <iframe src="https://www.slideshare.net/slideshow/embed_code/key/DdqbWhOHLZUSEf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" allowfullscreen> </iframe>
-
-                <!--<script async class="speakerdeck-embed" data-id="f3c5eb2dd2c443c6b1d6d521f58d363e" data-ratio="1.77777777777778" src="http://speakerdeck.com/assets/embed.js"></script>-->
-            </div>
-
+                <iframe src="https://www.slideshare.net/slideshow/embed_code/key/DdqbWhOHLZUSEf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="position: absolute; top: 0; left: 0; width: 80%; height: 80%;" allowfullscreen> </iframe>
+</div>
 <p>from <a href="https://uclab.fh-potsdam.de/cf/">cf. city flows</a></p>
