--- a/_posts/2016-10-03-CityFlow.md
+++ b/_posts/2016-10-03-CityFlow.md
@@ -23,7 +23,12 @@ The `citywide view` aggregates all trajectories of bike-sharing trips for a give
 In the `station view` only the bike trips to and from a selected station are shown, allowing the distinction between incoming and outgoing.
 
 
-A small-multiple view visualizes `spatio-temporal patterns` for three selected stations each in an exploded view that separates incoming from outgoing and morning from afternoon/evening trips.
+A `small-multiple view` visualizes spatio-temporal patterns for three selected stations each in an exploded view that separates incoming from outgoing and morning from afternoon/evening trips.
+
+
+<div class="slider-container"><img alt="Trails of rented bikes in New York" src="images/cf-nyc-citywide.jpg" />
+        <h2 class="slider-title"><span class="slider-title-padding"><span class="slider-title-underline">Citywide view showing bike trajectories.</span></span> 
+</div>
 
 
 <div class="slider-container" style="padding-bottom: 56.25%; padding-top: 25px; height: 0; margin-bottom: 1.5rem;
