--- a/_posts/2016-10-03-CityFlow.md
+++ b/_posts/2016-10-03-CityFlow.md
@@ -25,17 +25,12 @@ In the `station view` only the bike trips to and from a selected station are sho
 
 A `small-multiple view` visualizes spatio-temporal patterns for three selected stations each in an exploded view that separates incoming from outgoing and morning from afternoon/evening trips.
 
+<div align="center"> <img src="https://yuhanggu.github.io/MovementVis/img/cf-nyc-citywide.jpg" width = "80%" height = "80%" /></div>
+<div align="center"> <img src="https://yuhanggu.github.io/MovementVis/img/cf-london-station.jpg" width = "80%" height = "80%" /></div>
+<div align="center"> <img src="https://yuhanggu.github.io/MovementVis/img/cf-nyc-smallmultiples.png" width = "80%" height = "80%" /></div>
+<div align="center"> <img src="https://yuhanggu.github.io/MovementVis/img/cf-ipad-dashboard-controller.png" width = "80%" height = "80%" /></div>
 
-<div class="slider-container"><img alt="Trails of rented bikes in New York" src="images/cf-nyc-citywide.jpg" />
-        <h2 class="slider-title"><span class="slider-title-padding"><span class="slider-title-underline">Citywide view showing bike trajectories.</span></span> 
-</div>
-
-
-<div class="slider-container" style="padding-bottom: 56.25%; padding-top: 25px; height: 0; margin-bottom: 1.5rem;
-  position: relative;
-  float: left;
-  margin-left: -1.25rem;
-  width: calc( 100% - .5rem);">
-                <iframe src="https://www.slideshare.net/slideshow/embed_code/key/DdqbWhOHLZUSEf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="position: absolute; top: 0; left: 0; width: 80%; height: 80%;" allowfullscreen> </iframe>
+<div class="slider-container" style="padding-bottom: 56.25%; padding-top: 25px; height: 0; margin-bottom: 1.5rem; position: relative; float: left; margin-left: -1.25rem; width: calc( 100% - .5rem);" align="center">
+    <iframe src="https://www.slideshare.net/slideshow/embed_code/key/DdqbWhOHLZUSEf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="position: absolute; top: 0; left: 0; width: 80%; height: 80%;" allowfullscreen></iframe>
 </div>
 <p>from <a href="https://uclab.fh-potsdam.de/cf/">cf. city flows</a></p>
