--- a/_posts/2016-10-03-CityFlow.md
+++ b/_posts/2016-10-03-CityFlow.md
@@ -2,7 +2,7 @@
 layout: post
 title: "CF. City Flows : a comparative visualization environment of urban bike mobility"
 excerpt: "cf. city flows is a comparative visualization environment of urban bike mobility designed to help citizens casually analyze three bike-sharing systems in the context of a public exhibition space."
-categories: [Animation]
+categories: [Animation, Aggregation, Multiple View]
 author: Yuhang
 comments: true
 video:
